# functional_languages_lab_3

./: .gitignore  LICENSE  README.md  functional-languages-lab3.cabal  stack.yaml
.github/workflows/: haskell-lab3-tests.yml
.stack-work/: stack.sqlite3
src/: App.hs  Interpolation.hs  Main.hs  Types.hs
test/: Spec.hs
