cabal-version:       2.2

name:                functional-languages-lab3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/functional-languages-lab3#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable functional-languages-lab3
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       App
                     , Interpolation
                     , Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite functional-languages-lab3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  other-modules:       App
                     , Interpolation
                     , Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/githubuser/functional-languages-lab3
